[tool.poetry]
name = "payhere_homework"
version = "0.1.0"
description = ""
authors = ["lunchRamen <bloom6561@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.4"
django-rest-framework = "^0.1.0"
drf-yasg = "^1.21.4"
django-filter = "^22.1"
django-extensions = "^3.2.1"
freezegun = "^1.2.2"
test-plus = "^0.2.2"
mysqlclient = "^2.1.1"
djangorestframework-simplejwt = "^5.2.2"
django-allauth = "^0.51.0"
dj-rest-auth = "^2.2.5"
flake8 = "^6.0.0"
isort = "^5.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
